fixed work section alignment

--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ header {
 header h1 {
 	color: #c78056;
 	font-family: 'Alice', serif;
-	font-size: 3.125em;
+	font-size: 3.125rem;
 	margin: 70px 0 0 0;
 	text-align: center;
 }
@@ -126,6 +126,10 @@ header h2 {
 	color: #c78056;
 }
 
+#work a {
+	display: flex;
+	justify-content: center;
+}
 
 #work img {
 	border: 1px solid #ddd;
@@ -133,12 +137,29 @@ header h2 {
 	width: 70%;
 }
 
+.work-description {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	margin: 30px 0;
+}
+
+#work h4 {
+	font-weight: 600;
+	font-size: 2em;
+	margin: 0;
+	text-align: left;
+	width: 70%;
+}
+
 #work p {
 	color: #757575;
 	font-weight: 400;
 	font-size: 2em;
+	margin: 0;
 	text-align: left;
-	width: 60%;
+	width: 70%;
 }
 
 
@@ -233,18 +254,20 @@ nav ul li a {
 
 header h1 {
 	margin-top: 100px;
-	font-size: 5em;
+	font-size: 3.125rem;
 }
 
 .work-example {
-	width: 90%;
+	width: 60%;
 	flex-flow: row wrap;
 	justify-content: space-around;
 	margin-bottom: 50px;
+	align-items: flex-start;
 }
 
 #work .work-description {
 	width: 40%;
+	align-items: flex-start;
 }
 
 #work a {
@@ -257,6 +280,13 @@ header h1 {
 
 #work p {
 	font-size: 1.25em;
+	width: 100%;
+	margin: 0;
+}
+
+#about p {
+	font-size: 1.5em;
+	width: 60%;
 }
 
 }
